test/ci/back-end/fail/alloc_ref_twice.t
  $ dune exec -- raven --shh ./alloc_ref_twice.rav
  [Error] File "./alloc_ref_twice.rav", line 9, columns 11-16:
  9 |     assert false;
                 ^^^^^
  Verification Error: This assertion may be violated.
  [1]
